<resources>
    <string name="app_name">SARDA Communicator</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">SARDA COMMUNICATOR</string>
    <string name="userName">User Name</string>
    <string name="login_requets">LOGIN</string>
    <string name="SignUp_requets">SIGN UP</string>
    <string name="Motto">Riding With Purpose</string>
    <string name="title_activity_login">Login</string>
    <string name="account">CREATE ACCOUNT</string>
    <string name="copy">Group4 IE2015</string>
    <string name="in">SIGN IN</string>
    <string name="back">Back</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="details">Please Enter Your Details</string>
    <string name="about">ABOUT US</string>

    <string name="title_activity_about_us">AboutUs</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hello_world">Hello world!</string>
    <string name="description">South African Riding for the Disabled Association S.A.R.D.A. was established in Cape Town in 1973 by Belinda Sampson and Joy Finlay. Today there are branches in Durban, Port Elizabeth and on the Highveld.
    The Highveld Branch of SARDA was established in 1984, and now has a centre in Peter Road, Ruimsig, Roodepoort.</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_landing">Landing</string>
    <string name="title_activity_drawer">Drawer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_calender">Calender</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>



</resources>
