<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group4ie.com.sardaapp.AboutUs"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about"
        android:id="@+id/about"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff450cff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/sardalogo"
        android:layout_below="@+id/about"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:text="@string/description"
        android:layout_below="@+id/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/Home"
        android:onClick="onClick"
        android:background="#ff450cff"

        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/about"
        android:layout_alignStart="@+id/about" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Contact us on 011 804 2247"
        android:id="@+id/textView2"
        android:layout_above="@+id/Home"
        android:layout_alignRight="@+id/logo"
        android:layout_alignEnd="@+id/logo"
        android:layout_marginBottom="32dp" />
</RelativeLayout>
