<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group4ie.com.sardaapp.Login"
    android:id="@+id/RelativeLayout"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/in"
        android:id="@+id/Account"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff450cff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/userName"
        android:layout_marginTop="38dp"
        android:editable="true"
        android:hint="UserName"
        android:layout_below="@+id/Account"
        android:layout_alignLeft="@+id/PasswordText"
        android:layout_alignStart="@+id/PasswordText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/PasswordText"
        android:editable="true"
        android:hint="Password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_requets"
        android:id="@+id/loginButton"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/PasswordText"
        android:layout_alignRight="@+id/PasswordText"
        android:layout_alignEnd="@+id/PasswordText"
        android:background="#ff450cff"
        android:onClick="onClickLogin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/Back"
        android:onClick="onClick"
        android:layout_alignTop="@+id/loginButton"
        android:layout_alignLeft="@+id/PasswordText"
        android:layout_alignStart="@+id/PasswordText"
        android:background="#ff450cff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Label"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
